<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="title_activity_upcoming">Upcoming Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ekky Rino</string>
    <string name="nav_header_subtitle">ekky.rhino@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Language</string>
    <string name="title_activity_search">Search Movie</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="vote_count">Vote Count</string>
    <string name="plot">Plot</string>
    <string name="enter_keyword">Enter keyword here</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="share">Share </string>
    <string name="search_movie">Search Movie</string>
    <string name="now_playing">Now Playing Movie</string>
    <string name="upcoming">Upcoming Movie</string>
    <string name="settings">Settings</string>
    <string name="empty_field_error">This field should not be empty</string>
    <string name="title_detail_activity">Movie Detail</string>
    <string name="search_message">Please enter a search phrase</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_widget">Film Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Empty Text</string>
    <string name="daily_reminder_message">Good morning... Lets check new movie update today.</string>
    <string name="release_today_text">is release today.</string>
</resources>
