<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/search_movie" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_black"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
